<resources>
    <string name="app_name">MUFF\n시험본부</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="exam_infomation">시험 정보</string>
    <string name="date">날짜</string>
    <string name="date_sample">2020년 04월 23일</string>
    <string name="start_end_time">시작,종료시간</string>
    <string name="start_end_time_sample">09:00 - 12:00</string>
    <string name="login_division">구분</string>
    <string name="login_degree">1차</string>
    <string name="login">로그인</string>
    <string name="switch_woman">여자</string>
    <string name="switch_man">남자</string>
    <string name="qr_scan_cancel">취소</string>
    <string name="qr_code_search_guide">QR코드 목걸이를 분실했거나, 인식이 안될 시 아래를 입력하여 등록하실 수 있습니다.</string>
    <string name="input_number">비번호 입력</string>
    <string name="input_name">이름 입력</string>
    <string name="search">검색</string>
    <string name="logout">로그아웃</string>
    <string name="example_text">2020 제 1회 외국인력 선발포인트제 기능시험</string>
    <string name="choice">선택</string>
    <string name="select_examinee">응시자 선택</string>
    <string name="login_hq">시험본부</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="result_summit">최종 제출</string>
    <string name="plz_click_upload_btn">하단 동영상 업로드 버튼을 눌러주세요.</string>
    <string name="result_check">채점이력 확인 및 제출완료</string>
    <string name="ready_for_upload">업로드 준비중</string>
    <string name="send_scorecard">채점표 전송</string>
    <string name="upload_in_progress">(통신) 업로드</string>
    <string name="synchronization">동기화</string>
    <string name="rationale_title">앱 권한 요구</string>
    <string name="rationale_message">면접영상 저장을 위한<b> 저장소권한</b>, 촬영을 위한<b> 카메라권한</b>, 면접녹음을 위한<b> 녹음권한</b>이 요구됩니다.</string>
    <string name="input_id">아이디 입력</string>
    <string name="input_pw">패스워드 입력</string>
    <string name="ver">Ver.</string>
    <string name="trial_file">시행파일</string>
    <string name="update_result">결과: -</string>
    <string name="admin_mode">관리자 모드</string>
    <string name="admin_code_input">관리자 코드를 입력하세요</string>
    <string name="confirm">확인</string>
    <string name="re_scoring_approval">재채점 승인</string>
    <string name="hq_server_sync">응시정보 다운로드</string>
    <string name="hq_server_sync_log">응시정보를 다운로드 했습니다.</string>
    <string name="sync_score_result">채점결과 동기화</string>
    <string name="sync_attendance_result">응시결과 업로드</string>
    <string name="result_upload_log">응시결과를 업로드 했습니다.</string>
    <string name="video_upload_log">면접 영상을 업로드 했습니다.</string>
    <string name="title_ip_setting">IP 설정</string>
    <string name="ip_setting_host">http://192.168.</string>
    <string name="dot">.</string>
    <string name="ip_setting_port">:8080</string>
    <string name="setting">설정</string>
    <string name="apk_file_dwnl">APK 설치파일 다운로드</string>
    <string name="vd_rcr_setting">동영상 녹화 설정</string>
    <string name="resolution">| 해상도</string>
    <string name="frame">| 프레임</string>
    <string name="delete_history">영상 기록 삭제</string>
    <string name="db_update">데이터 적용</string>
    <string name="sign">서명</string>
    <string name="notice">알림</string>
    <string name="sex">성별</string>
    <string name="birth">생년월일</string>
    <string name="birth_id">신분증</string>
    <string name="birth_id_num">신분증번호</string>
    <string name="name">이름</string>
    <string name="korea_exam_num">한국어능력시험번호</string>
    <string name="function_test_number">기능시험번호</string>
    <string name="sectors">업종</string>
    <string name="details">기초기능특화</string>
    <string name="temp_num">비번호</string>
    <string name="video_shooting">영상 촬영(한국어)</string>
    <string name="video_shooting_english">영상 촬영(영어)</string>
    <string name="interview_video_shoot">면접영상 촬영</string>
    <string name="interview_video_save">면접 영상 저장</string>
    <string name="password_or_name">비번호 또는 이름</string>
    <string name="shooting">촬영여부</string>
    <string name="qr_code_recognition">QR 코드 인식</string>
    <string name="final_submission">면접 영상 최종 제출</string>
    <string name="current_time">현재시간: </string>
    <string name="collapse_area">검색영역 접기</string>
    <string name="receipt">접수</string>
    <string name="_16">16명</string>
    <string name="apply_exam">응시</string>
    <string name="_15">15명</string>
    <string name="ending">결시</string>
    <string name="print_photos">응시자 사진 출력</string>
    <string name="photo">사진</string>
    <string name="apply_chk">응시체크</string>
    <string name="scorer_3">채점자3</string>
    <string name="close">닫기</string>
    <string name="reshoot">재촬영</string>
    <string name="scorer">채점자</string>
    <string name="submit_history">면접이력 확인 및 제출</string>
    <string name="picture">사진</string>
    <string name="apply_number">응시번호</string>
    <string name="date_submit_answer">답안제출일시</string>
    <string name="cancle">취소</string>
    <string name="score_submit_complete">채점 제출 완료</string>
    <string name="go_main_score_screen">채점 메인화면으로 이동합니다.</string>
    <string name="start_shooting">촬영시작</string>
    <string name="complete_shoot">촬영 완료</string>
    <string name="next">다음</string>
    <string name="change">변경</string>
    <string name="state">응시상태</string>
    <string name="prev">이전</string>
    <string name="download_in_progress">(통신) 다운로드</string>
    <string name="plz_click_download_btn">하단 다운로드 버튼을 눌러주세요.</string>
    <string name="download">다운로드</string>
    <string name="ready_for_download">다운로드 준비중</string>
    <string-array name="am_pm">
        <item>am</item>
        <item>pm</item>
    </string-array>
    <string name="preferences_key">preferences</string>
</resources>