<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#404040"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/notosanscjkkrbold"
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="70dp"
                android:paddingVertical="30dp">

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:minHeight="125dp"
                    android:paddingStart="10dp"
                    android:paddingTop="17.5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="21sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_setting_save"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="7dp"
                        android:backgroundTint="#0070BF"
                        android:textSize="24sp"
                        android:text="@string/confirm"
                        android:textColor="#FFFFFF"
                        android:fontFamily="@font/notosanscjkkrbold"
                        android:includeFontPadding="false" />

                    <Button
                        android:id="@+id/btn_setting_cancel"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="#404040"
                        android:text="@string/cancle"
                        android:textSize="24sp"
                        android:textColor="#FFFFFF"
                        android:fontFamily="@font/notosanscjkkrbold"
                        android:includeFontPadding="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>