<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_admin_first"
            android:layout_width="500dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@color/light_gray"
            android:visibility="visible">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/h_guide_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="60dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/h_guide_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/h_guide_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toTopOf="@id/h_guide_1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/header_bg_color"
                android:fontFamily="@font/notosanscjkkrbold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/admin_mode"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/h_guide_1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_close_white"
                app:layout_constraintBottom_toBottomOf="@id/h_guide_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/admin_code_input"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/h_guide_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/h_guide_1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_input_admin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanscjkkrbold"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:layout_marginHorizontal="10dp"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="@id/h_guide_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="260dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/sky"
                android:fontFamily="@font/notosanscjkkrbold"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/h_guide_3"
                app:strokeColor="@color/gray"
                app:strokeWidth="1dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>